feat: 카테고리 조회 시 오름차순 정렬